# gen-ai-code

./: .gitignore  README.md
api-contract-generator/: README.md
api-contract-generator/.copilot/agents/: api-contract-architect.agent
api-contract-generator/.github/agents/: api-contract-agent.agent.md
api-contract-generator/.github/prompts/: explain-code.prompt.md
api-contract-generator/backend/: UserController.java  UserDTO.java
api-contract-generator/frontend/app-frontend/: README.md  angular.json  package-lock.json  package.json
langchain-olamma/: .env.example  README.md  main.py  ollama_client.py  pyproject.toml  requirements.txt
langchain-olamma/.github/workflows/: python-app.yml
langchain-olamma/tests/: test_main.py
mcp-calculator/: README.md  Untitled-1.json  calculator.py
mcp-flow/: .gitignore  README.md  client.py  requirements.txt
mcp-flow-typescript/: client.ts
mcp-rest-api-parser/: README.md  ReportsApiUsage.md  db.json  dbmcp.json  main.py  pyproject.toml
mcp-rest-api-parser/mcp-client/: README.md  mcp-servers.config.json
mcp-rest-api-parser/mcp-server/: .gitignore  Dockerfile  README.md  main.py
node-mcp-rest-server/: README.md  package-lock.json  package.json
node-mcp-rest-server/src/: server-bak.ts  server.ts
spring-boot-api-doc-swagger/ecommerce-microservices/: README-AI.md
web-mcp/: client.js  package-lock.json  package.json  server.js
web-mcp-ollamma/: index.js  package-lock.json  package.json
web-mcp2/: client.js  index.js  package.json
wireframe-generator/ui-story/: customer-support-dashboard.md
(+12 files in other folders)
